--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "clean-webpack-plugin": "^3.0.0",
         "eslint": "^7.26.0",
         "file-loader": "^6.2.0",
+        "follow-redirects": ">=1.14.7",
         "html-webpack-plugin": "^4.5.2",
         "raw-loader": "^4.0.2",
         "source-map-loader": "^2.0.1",
