--- a/package.json
+++ b/package.json
@@ -3,35 +3,10 @@
     "version": "0.0.1",
     "description": "Port of the Unity Ocean demo https://github.com/gasgiant/FFT-Ocean in Babylon.js WebGPU",
     "main": "index.ts",
-    "dependencies": {
-        "@babylonjs/core": "^5.0.0-beta.5",
-        "@babylonjs/gui": "^5.0.0-beta.5",
-        "@babylonjs/inspector": "^5.0.0-beta.5",
-        "@babylonjs/loaders": "^5.0.0-beta.5",
-        "@babylonjs/materials": "^5.0.0-beta.5"
-    },
-    "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^2.30.0",
-        "@typescript-eslint/parser": "^2.30.0",
-        "clean-webpack-plugin": "^3.0.0",
-        "eslint": "^7.26.0",
-        "file-loader": "^6.2.0",
-        "follow-redirects": ">=1.14.7",
-        "html-webpack-plugin": "^4.5.2",
-        "raw-loader": "^4.0.2",
-        "source-map-loader": "^2.0.1",
-        "ts-loader": "^8.2.0",
-        "typescript": "^4.3.2",
-        "url-loader": "^4.1.1",
-        "webpack": "^5.37.0",
-        "webpack-cli": "^4.7.0",
-        "webpack-dev-server": "^3.11.2",
-        "webpack-merge": "^5.7.3"
-    },
     "scripts": {
-        "start": "npx webpack serve --config webpack.dev.js",
-        "build": "npx webpack --config webpack.prod.js",
-        "lint": "npx eslint . --ext .ts,.tsx"
+        "start": "webpack serve",
+        "build": "webpack --mode=production",
+        "lint": "eslint src/**/*,{ts,tsx}"
     },
     "repository": {
         "type": "git",
@@ -49,5 +24,30 @@
         "url": "http://www.evpopov.com/"
     },
     "license": "MIT",
-    "homepage": "https://github.com/Popov72/OceanDemo"
+    "homepage": "https://github.com/Popov72/OceanDemo",
+    "dependencies": {
+        "@babylonjs/core": "^5.0.0-beta.5",
+        "@babylonjs/gui": "^5.0.0-beta.5",
+        "@babylonjs/inspector": "^5.0.0-beta.5",
+        "@babylonjs/loaders": "^5.0.0-beta.5",
+        "@babylonjs/materials": "^5.0.0-beta.5",
+        "lil-gui": "0.16.0"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.10.2",
+        "@typescript-eslint/parser": "^5.10.2",
+        "eslint": "^8.8.0",
+        "file-loader": "^6.2.0",
+        "follow-redirects": ">=1.14.7",
+        "html-webpack-plugin": "^5.5.0",
+        "raw-loader": "^4.0.2",
+        "source-map-loader": "^3.0.1",
+        "ts-loader": "^9.2.6",
+        "typescript": "^4.5.5",
+        "url-loader": "^4.1.1",
+        "webpack": "^5.68.0",
+        "webpack-cli": "^4.9.2",
+        "webpack-dev-server": "^4.7.3",
+        "rimraf": "3.0.2"
+    }
 }
