--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,7 @@
         "sourceMap": true,
         "rootDir": "src",
         "baseUrl": "src"
-	}
+	},
+    "include": ["src"],
+    "exclude": ["node_modules", "dist"]
 }
