--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "webpack": "^5.68.0",
         "webpack-cli": "^4.9.2",
         "webpack-dev-server": "^4.7.3",
-        "rimraf": "3.0.2"
+        "rimraf": "3.0.2",
+        "tsconfig-paths-webpack-plugin":"3.5.2"
     }
 }
