--- a/package.json
+++ b/package.json
@@ -36,19 +36,20 @@
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.10.2",
         "@typescript-eslint/parser": "^5.10.2",
+        "copy-webpack-plugin": "^12.0.2",
         "eslint": "^8.8.0",
         "file-loader": "^6.2.0",
         "follow-redirects": ">=1.14.7",
         "html-webpack-plugin": "^5.5.0",
         "raw-loader": "^4.0.2",
+        "rimraf": "3.0.2",
         "source-map-loader": "^3.0.1",
         "ts-loader": "^9.2.6",
+        "tsconfig-paths-webpack-plugin": "3.5.2",
         "typescript": "^4.5.5",
         "url-loader": "^4.1.1",
         "webpack": "^5.68.0",
         "webpack-cli": "^4.9.2",
-        "webpack-dev-server": "^4.7.3",
-        "rimraf": "3.0.2",
-        "tsconfig-paths-webpack-plugin": "3.5.2"
+        "webpack-dev-server": "^4.7.3"
     }
 }
