--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@typescript-eslint/eslint-plugin": "^5.10.2",
         "@typescript-eslint/parser": "^5.10.2",
         "copy-webpack-plugin": "^12.0.2",
+        "dotenv-webpack": "^8.1.0",
         "eslint": "^8.8.0",
         "file-loader": "^6.2.0",
         "follow-redirects": ">=1.14.7",
