--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
 		"preserveConstEnums":true,
         "sourceMap": true,
         "rootDir": "src",
-        "baseUrl": "src"
+        "baseUrl": "src",
+        "typeRoots": ["./node_modules/@types", "./src/types"]
 	},
     "include": ["src"],
     "exclude": ["node_modules", "dist"]
